--- a/dev/templates/lk-spec.html
+++ b/dev/templates/lk-spec.html
@@ -215,7 +215,7 @@
                                 <div class="c-icon-list">
                                     <div class="c-icon-list__item">
                                         <button class="c-btn c-btn_product-action" type="button">
-                                            <svg fill="none" height=24" width="24" xmlns="http://www.w3.org/2000/svg">
+                                            <svg fill="none" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
                                                 <use xlink:href="images/svg.svg#close"
                                                      xmlns="http://www.w3.org/1999/xlink"></use>
                                             </svg>
@@ -257,7 +257,7 @@
                                 <div class="c-icon-list">
                                     <div class="c-icon-list__item">
                                         <button class="c-btn c-btn_product-action" type="button">
-                                            <svg fill="none" height=24" width="24" xmlns="http://www.w3.org/2000/svg">
+                                            <svg fill="none" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
                                                 <use xlink:href="images/svg.svg#close"
                                                      xmlns="http://www.w3.org/1999/xlink"></use>
                                             </svg>
@@ -299,7 +299,7 @@
                                 <div class="c-icon-list">
                                     <div class="c-icon-list__item">
                                         <button class="c-btn c-btn_product-action" type="button">
-                                            <svg fill="none" height=24" width="24" xmlns="http://www.w3.org/2000/svg">
+                                            <svg fill="none" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
                                                 <use xlink:href="images/svg.svg#close"
                                                      xmlns="http://www.w3.org/1999/xlink"></use>
                                             </svg>
@@ -380,7 +380,7 @@
                                 <div class="c-icon-list">
                                     <div class="c-icon-list__item">
                                         <button class="c-btn c-btn_product-action" type="button">
-                                            <svg fill="none" height=24" width="24" xmlns="http://www.w3.org/2000/svg">
+                                            <svg fill="none" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
                                                 <use xlink:href="images/svg.svg#close"
                                                      xmlns="http://www.w3.org/1999/xlink"></use>
                                             </svg>
@@ -422,7 +422,7 @@
                                 <div class="c-icon-list">
                                     <div class="c-icon-list__item">
                                         <button class="c-btn c-btn_product-action" type="button">
-                                            <svg fill="none" height=24" width="24" xmlns="http://www.w3.org/2000/svg">
+                                            <svg fill="none" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
                                                 <use xlink:href="images/svg.svg#close"
                                                      xmlns="http://www.w3.org/1999/xlink"></use>
                                             </svg>
@@ -464,7 +464,7 @@
                                 <div class="c-icon-list">
                                     <div class="c-icon-list__item">
                                         <button class="c-btn c-btn_product-action" type="button">
-                                            <svg fill="none" height=24" width="24" xmlns="http://www.w3.org/2000/svg">
+                                            <svg fill="none" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
                                                 <use xlink:href="images/svg.svg#close"
                                                      xmlns="http://www.w3.org/1999/xlink"></use>
                                             </svg>
@@ -545,7 +545,7 @@
                                 <div class="c-icon-list">
                                     <div class="c-icon-list__item">
                                         <button class="c-btn c-btn_product-action" type="button">
-                                            <svg fill="none" height=24" width="24" xmlns="http://www.w3.org/2000/svg">
+                                            <svg fill="none" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
                                                 <use xlink:href="images/svg.svg#close"
                                                      xmlns="http://www.w3.org/1999/xlink"></use>
                                             </svg>
@@ -587,7 +587,7 @@
                                 <div class="c-icon-list">
                                     <div class="c-icon-list__item">
                                         <button class="c-btn c-btn_product-action" type="button">
-                                            <svg fill="none" height=24" width="24" xmlns="http://www.w3.org/2000/svg">
+                                            <svg fill="none" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
                                                 <use xlink:href="images/svg.svg#close"
                                                      xmlns="http://www.w3.org/1999/xlink"></use>
                                             </svg>
