--- a/dev/templates/add-item-in-cart.html
+++ b/dev/templates/add-item-in-cart.html
@@ -137,9 +137,9 @@
                                                     <button class="c-input-counter__right-ctrl" type="button">+
                                                     </button>
                                                 </div>
-                                                <button class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                                        href="#" type="button"> В корзину
-                                                </button>
+                                                <a data-basket-btn class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
+                                                        href="#popup-form"> В корзину
+                                                </a>
                                             </div>
 
                                         </div>
@@ -184,9 +184,9 @@
                                                     <button class="c-input-counter__right-ctrl" type="button">+
                                                     </button>
                                                 </div>
-                                                <button class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                                        href="#" type="button"> В корзину
-                                                </button>
+                                                <a data-basket-btn class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
+                                                        href="#popup-form"> В корзину
+                                                </a>
                                             </div>
 
                                         </div>
@@ -231,9 +231,9 @@
                                                     <button class="c-input-counter__right-ctrl" type="button">+
                                                     </button>
                                                 </div>
-                                                <button class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                                        href="#" type="button"> В корзину
-                                                </button>
+                                                <a data-basket-btn class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
+                                                        href="#popup-form"> В корзину
+                                                </a>
                                             </div>
 
                                         </div>
@@ -278,9 +278,9 @@
                                                     <button class="c-input-counter__right-ctrl" type="button">+
                                                     </button>
                                                 </div>
-                                                <button class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                                        href="#" type="button"> В корзину
-                                                </button>
+                                                <a data-basket-btn class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
+                                                        href="#popup-form"> В корзину
+                                                </a>
                                             </div>
 
                                         </div>
