--- a/dev/templates/index.html
+++ b/dev/templates/index.html
@@ -366,9 +366,9 @@
                                                             <button type="button" class="c-input-counter__left-ctrl">-</button>
                                                             <button type="button" class="c-input-counter__right-ctrl">+</button>
                                                         </div>
-                                                        <button type="button" class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                                                href="#"> В корзину
-                                                        </button>
+                                                        <a type="button" data-basket-btn class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
+                                                                href="#popup-form"> В корзину
+                                                        </a>
                                                     </div>
                                                     <div class="c-product-controls__footer">
                                                         <button type="button" class="c-product-controls__buy c-btn c-btn_style-default c-btn_color-light c-btn_sm"
@@ -447,9 +447,9 @@
                                                             <button type="button" class="c-input-counter__left-ctrl">-</button>
                                                             <button type="button" class="c-input-counter__right-ctrl">+</button>
                                                         </div>
-                                                        <button type="button" class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                                                href="#"> В корзину
-                                                        </button>
+                                                        <a type="button" data-basket-btn class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
+                                                                href="#popup-form"> В корзину
+                                                        </a>
                                                     </div>
                                                     <div class="c-product-controls__footer">
                                                         <button type="button" class="c-product-controls__buy c-btn c-btn_style-default c-btn_color-light c-btn_sm"
@@ -528,9 +528,9 @@
                                                             <button type="button" class="c-input-counter__left-ctrl">-</button>
                                                             <button type="button" class="c-input-counter__right-ctrl">+</button>
                                                         </div>
-                                                        <button type="button" class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                                                href="#"> В корзину
-                                                        </button>
+                                                        <a type="button" data-basket-btn class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
+                                                                href="#popup-form"> В корзину
+                                                        </a>
                                                     </div>
                                                     <div class="c-product-controls__footer">
                                                         <button type="button" class="c-product-controls__buy c-btn c-btn_style-default c-btn_color-light c-btn_sm"
