--- a/dev/templates/kit.html
+++ b/dev/templates/kit.html
@@ -506,10 +506,11 @@
                                 <div class="c-product-controls__body">
                                     <input class="c-product-controls__counter c-input c-input_md c-input_style-secondary c-input_color-primary"
                                            type="text" value="1">
-                                    <button class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                            href="#">
+                                    <a class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
+                                            data-basket-btn
+                                            href="#popup-form">
                                         В корзину
-                                    </button>
+                                    </a>
                                 </div>
                                 <div class="c-product-controls__footer">
                                     <button class="c-product-controls__buy c-btn c-btn_style-default c-btn_color-light c-btn_sm"
@@ -547,9 +548,10 @@
                             <div class="c-product-controls__body">
                                 <input class="c-product-controls__counter c-input c-input_md c-input_style-secondary c-input_color-primary"
                                        type="text" value="1">
-                                <button class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                        href="#"> В корзину
-                                </button>
+                                <a class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
+                                        data-basket-btn
+                                        href="#popup-form"> В корзину
+                                </a>
                             </div>
 
                         </div>
@@ -622,10 +624,11 @@
                                     <div class="c-product-controls__body">
                                         <input class="c-product-controls__counter c-input c-input_md c-input_style-secondary c-input_color-primary"
                                                type="text" value="1">
-                                        <button class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                                href="#">
+                                        <a class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
+                                                data-basket-btn
+                                                href="#popup-form">
                                             В корзину
-                                        </button>
+                                        </a>
                                     </div>
                                     <div class="c-product-controls__footer">
                                         <button class="c-product-controls__buy c-btn c-btn_style-default c-btn_color-light c-btn_sm"
