--- a/dev/templates/lk-spec.html
+++ b/dev/templates/lk-spec.html
@@ -155,7 +155,7 @@
                 </a>
             </div>
         </div>
-        <div class="c-specifications-section">
+        <div class="c-specifications-section c-specifications-section_bordered">
             <div class="c-specifications-section__header">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-auto">
@@ -320,7 +320,7 @@
                 </div>
             </div>
         </div>
-        <div class="c-specifications-section">
+        <div class="c-specifications-section c-specifications-section_bordered">
             <div class="c-specifications-section__header">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-auto">
