--- a/dev/templates/search-result.html
+++ b/dev/templates/search-result.html
@@ -217,10 +217,10 @@
                                             <button class="c-input-counter__left-ctrl" type="button">-</button>
                                             <button class="c-input-counter__right-ctrl" type="button">+</button>
                                         </div>
-                                        <button class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                                href="#"
-                                                type="button"> В корзину
-                                        </button>
+                                        <a data-basket-btn class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
+                                                href="#popup-form"
+                                                > В корзину
+                                        </a>
                                     </div>
                                     <div class="c-product-controls__footer">
                                         <button class="c-product-controls__buy c-btn c-btn_style-default c-btn_color-light c-btn_sm"
@@ -287,10 +287,10 @@
                                             <button class="c-input-counter__left-ctrl" type="button">-</button>
                                             <button class="c-input-counter__right-ctrl" type="button">+</button>
                                         </div>
-                                        <button class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                                href="#"
-                                                type="button"> В корзину
-                                        </button>
+                                        <a data-basket-btn class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
+                                                href="#popup-form"
+                                                > В корзину
+                                        </a>
                                     </div>
                                     <div class="c-product-controls__footer">
                                         <button class="c-product-controls__buy c-btn c-btn_style-default c-btn_color-light c-btn_sm"
@@ -357,10 +357,10 @@
                                             <button class="c-input-counter__left-ctrl" type="button">-</button>
                                             <button class="c-input-counter__right-ctrl" type="button">+</button>
                                         </div>
-                                        <button class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                                href="#"
-                                                type="button"> В корзину
-                                        </button>
+                                        <a data-basket-btn class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
+                                                href="#popup-form"
+                                                > В корзину
+                                        </a>
                                     </div>
                                     <div class="c-product-controls__footer">
                                         <button class="c-product-controls__buy c-btn c-btn_style-default c-btn_color-light c-btn_sm"
@@ -427,10 +427,10 @@
                                             <button class="c-input-counter__left-ctrl" type="button">-</button>
                                             <button class="c-input-counter__right-ctrl" type="button">+</button>
                                         </div>
-                                        <button class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                                href="#"
-                                                type="button"> В корзину
-                                        </button>
+                                        <a data-basket-btn class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
+                                                href="#popup-form"
+                                                > В корзину
+                                        </a>
                                     </div>
                                     <div class="c-product-controls__footer">
                                         <button class="c-product-controls__buy c-btn c-btn_style-default c-btn_color-light c-btn_sm"
@@ -497,10 +497,9 @@
                                             <button class="c-input-counter__left-ctrl" type="button">-</button>
                                             <button class="c-input-counter__right-ctrl" type="button">+</button>
                                         </div>
-                                        <button class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                                href="#"
-                                                type="button"> В корзину
-                                        </button>
+                                        <a data-basket-btn class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
+                                                href="#popup-form"> В корзину
+                                        </a>
                                     </div>
                                     <div class="c-product-controls__footer">
                                         <button class="c-product-controls__buy c-btn c-btn_style-default c-btn_color-light c-btn_sm"
@@ -567,10 +566,9 @@
                                             <button class="c-input-counter__left-ctrl" type="button">-</button>
                                             <button class="c-input-counter__right-ctrl" type="button">+</button>
                                         </div>
-                                        <button class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                                href="#"
-                                                type="button"> В корзину
-                                        </button>
+                                        <a data-basket-btn class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
+                                                href="#popup-form"> В корзину
+                                        </a>
                                     </div>
                                     <div class="c-product-controls__footer">
                                         <button class="c-product-controls__buy c-btn c-btn_style-default c-btn_color-light c-btn_sm"
