--- a/dev/scss/layout/_main.scss
+++ b/dev/scss/layout/_main.scss
@@ -353,7 +353,7 @@ body {
       }
     }
 
-    &.c-product-card_request-price{
+    &.c-product-card_request-price {
       .c-product-card__controls {
         width: auto;
         max-width: 100%;
@@ -432,8 +432,9 @@ body {
     flex-shrink: 0;
     margin-right: 10px;
   }
-  &_counter-lg{
-    .c-product-controls__counter{
+
+  &_counter-lg {
+    .c-product-controls__counter {
       width: 140px;
     }
   }
@@ -483,6 +484,16 @@ body {
     align-items: center;
     justify-content: center;
     width: 100%;
+  }
+
+  &_fixed-item.c-product-list_sm.c-product-list_custom-gutter {
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+
+  &_fixed-item.c-product-list_sm.c-product-list_custom-gutter &__item {
+    padding-left: 15px;
+    padding-right: 15px;
   }
 
   &_fixed-item.c-product-list_sm &__item {
@@ -966,10 +977,13 @@ body {
 
 .c-specifications-section {
   padding: 30px;
-  border: 1px solid #F2F2F2;
   border-radius: 6px;
   background-color: $color-lightest;
   margin-bottom: 20px;
+
+  &_bordered {
+    border: 1px solid #F2F2F2;
+  }
 
   &__actions {
     display: flex;
@@ -1053,7 +1067,7 @@ body {
   }
 }
 
-.c-modal{
+.c-modal {
   background-color: $color-lightest;
   width: 100%;
   margin: auto;
@@ -1063,7 +1077,7 @@ body {
   position: relative;
 }
 
-.mfp-close.modal-close{
+.mfp-close.modal-close {
   top: 64px;
   right: 50px;
 }
@@ -1077,15 +1091,47 @@ body {
   margin-top: 20px;
   border-radius: 10px;
 }
+
 .c-alert_success {
   border-color: $color-success;
   background-color: rgba($color-success, 20%);
 }
+
 .c-alert_error {
   border-color: $color-error;
   background-color: rgba($color-error, 20%);
 }
+
 .c-alert_warning {
   border-color: $color-warning;
   background-color: rgba($color-warning, 20%);
+}
+
+.c-products-slider .owl-stage-outer {
+  margin-left: -15px;
+  padding-left: 15px;
+  margin-bottom: -15px;
+  padding-bottom: 15px;
+  margin-right: -15px;
+  padding-right: 15px;
+}
+
+.c-cart-specifications-total{
+  padding: 30px;
+  background-color: $color-lighten;
+  &__btn{
+    width: 280px;
+    max-width: 100%;
+  }
+  &__prop{
+    font-size: 14px;
+    line-height: 22px;
+    color: $color-darkest;
+  }
+  &__list{
+    margin-bottom: -10px;
+  }
+  &__item{
+    padding-bottom: 10px;
+  }
 }
